# django-task-manager

./: .env_example  .gitignore  Makefile  README.md  TODO  build.sh  pyproject.toml
.github/workflows/: pyci.yml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
staticfiles/django_extensions/js/: jquery.ajaxQueue.js.br
task_manager/: settings.py  tests.py  urls.py  views.py
task_manager/label/: models.py  tests.py  urls.py  views.py
task_manager/label/migrations/: 0001_initial.py  0002_label_created_at_label_updated_at.py  0003_remove_label_task.py  0004_alter_label_created_at_alter_label_name_and_more.py
task_manager/staticfiles/: staticfiles.json
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py  0002_status_created_at_status_updated_at_and_more.py  0003_alter_status_created_at_alter_status_updated_at.py  (+1 more)
task_manager/task/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: index.html
task_manager/user/: forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html  index.html  logged_index.html
templates/components/: footer.html  language_switcher.html  navbar.html  navbar_logged.html
templates/label/: create.html  delete.html  index.html  update.html
templates/status/: create.html  delete.html  index.html  update.html
templates/task/: create.html  delete.html  index.html  read.html  update.html
templates/user/: create.html  delete.html  form.html  index.html  login.html  update.html
(+6 files in other folders)
